# advent-of-code-2021

./: .gitignore  README.md  advent-of-code.cabal  init_day.sh  run.sh
common/: Advent.hs
day01/: Main.hs
day02/: Main.hs
day03/: Main.hs
day04/: Main.hs
day05/: Main.hs  Naive.hs
day06/: Main.hs
day07/: Main.hs
day08/: Main.hs
day09/: Main.hs
day10/: Main.hs
day11/: Main.hs
day12/: Main.hs
day13/: Main.hs
day14/: Main.hs
day15/: Main.hs  Slow.hs
day16/: Main.hs
day17/: Main.hs
day18/: Main.hs
day19/: Main.hs  python.py
day20/: Main.hs
day21/: Main.hs
day22/: Main.hs
day23/: Main.hs  python.py
day24/: solution.md
day25/: Main.hs  python.py
