cabal-version: 2.4
name:          advent-of-code
version:       2.0.2.1
license:       MIT
author:        Vasil Shotarov

library
  build-depends: base ^>=4.14.3.0
  hs-source-dirs: common
  exposed-modules: Advent
  default-language: Haskell2010

executable day01
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
    hs-source-dirs:   day01
    default-language: Haskell2010

executable day02
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
    hs-source-dirs:   day02
    default-language: Haskell2010

executable day03
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
    hs-source-dirs:   day03
    default-language: Haskell2010

