cabal-version: 2.4
name:          advent-of-code
version:       2.0.2.1
license:       MIT
author:        Vasil Shotarov

library
  build-depends: base ^>=4.14.3.0
  hs-source-dirs: common
  exposed-modules: Advent
  default-language: Haskell2010

executable day01
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
    hs-source-dirs:   day01
    default-language: Haskell2010

executable day02
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
    hs-source-dirs:   day02
    default-language: Haskell2010

executable day03
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
    hs-source-dirs:   day03
    default-language: Haskell2010

executable day04
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
                     ,split
    hs-source-dirs:   day04
    default-language: Haskell2010

executable day05
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
                     ,split
                     ,containers
    hs-source-dirs:   day05
    default-language: Haskell2010

executable day06
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
                     ,split
    hs-source-dirs:   day06
    default-language: Haskell2010

executable day07
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
                     ,split
    hs-source-dirs:   day07
    default-language: Haskell2010

executable day08
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
                     ,split
                     ,containers
    hs-source-dirs:   day08
    default-language: Haskell2010

executable day09
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
    hs-source-dirs:   day09
    default-language: Haskell2010

executable day10
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
                     ,containers
    hs-source-dirs:   day10
    default-language: Haskell2010

executable day11
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                     ,advent-of-code
                     ,split
    hs-source-dirs:   day11
    default-language: Haskell2010

